# animed

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Camera.hpp  Config.hpp  Constants.hpp  GUI.hpp  Light.hpp  Mesh.hpp  Model.hpp  PointLight.hpp  Scene.hpp  Shader.hpp  ShaderLoader.hpp  SpotLight.hpp  TextureLoader.hpp  Transform.hpp  Utils.hpp  base64.hpp  utils.hpp
include/Light/: Light.hpp  PointLight.hpp  SpotLight.hpp
include/Loaders/: ShaderLoader.hpp  TextureLoader.hpp
include/Objects/: Floor.hpp  Mesh.hpp  Model.hpp
include/OpenGL/: Camera.hpp
include/Utils/: Utils.hpp
lib/: imgui_impl_glfw_gl3.cpp
lib/assimp/lib/cmake/assimp-3.2/: assimp-config.cmake
lib/assimp/lib/pkgconfig/: assimp.pc
lib/imgui/: imconfig.h
src/: Camera.cpp  Config.cpp  GUI.cpp  Light.cpp  Mesh.cpp  Model.cpp  PointLight.cpp  Scene.cpp  Shader.cpp  ShaderLoader.cpp  SpotLight.cpp  TextureLoader.cpp  Transform.cpp  Utils.cpp  Utils2.cpp  base64.cpp
src/Light/: Light.cpp  PointLight.cpp  SpotLight.cpp
src/Loaders/: ShaderLoader.cpp  TextureLoader.cpp
src/Objects/: Floor.cpp  Mesh.cpp  Model.cpp
src/OpenGL/: Camera.cpp  Shader.cpp
src/Utils/: Utils.cpp  base64.cpp
